--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ target_include_directories(${target_name}
 )
 
 target_sources(${target_name}
- PRIVATE "${CMAKE_CURRENT_LIST_DIR}/src/WLib.cpp"
+ PRIVATE "${CMAKE_CURRENT_LIST_DIR}/src/wlib.cpp"
 )
 
 target_link_libraries(${target_name}
